--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,5 +45,44 @@
 		<!-- 默认匹配所有的请求 -->
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	<!-- 配置阿里巴巴 druid -->
 
+	<!-- 经常需要排除一些不必要的url，比如.js,/jslib/等等。配置在init-param中。比如 -->
+	<filter>
+		<filter-name>DruidWebStatFilter</filter-name>
+		<filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
+		<init-param>
+			<param-name>exclusions</param-name>
+			<param-value>*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>DruidWebStatFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<!-- druid的Servlet -->
+	<servlet>
+		<servlet-name>DruidStatView</servlet-name>
+		<servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
+		<!-- 白名单 -->
+		<!-- <init-param> 如果是限定指定的子网里的所有ip都可以访问，那就是ip/子网掩码数。例如 192.168.1.120/24 
+			就相当于192.168.1.* <param-name>allow</param-name> <param-value>127.0.0.1</param-value> 
+			</init-param> -->
+		<!-- 如果不配置用户名密码，就是任何人都可以访问了 -->
+		<init-param>
+			<!-- 用户名 -->
+			<param-name>loginUsername</param-name>
+			<param-value>admin</param-value>
+		</init-param>
+		<init-param>
+			<!-- 密码 -->
+			<param-name>loginPassword</param-name>
+			<param-value>kmall/@</param-value>
+		</init-param>
+		</servlet>
+		<servlet-mapping>
+			<servlet-name>DruidStatView</servlet-name>
+			<url-pattern>/druid/*</url-pattern>
+		</servlet-mapping>
 </web-app>
