--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- apache shiro 安全框架 -->
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-all</artifactId>
+			<version>1.2.4</version>
+		</dependency>
 		<!-- 1. SSM主要jar包 -->
 		<!-- spring -->
 		<dependency>
