--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://120.79.15.136:3306/kmall?useUnicode=true&characterEncoding=utf8
 jdbc.username=kmall
+# 别看到这里就笑了，因为我这里有IP白名单并且是测试服务器
 jdbc.password=123456
